# icanact-examples

./: BENCHMARKS.md  Cargo.toml
benches/: _bench_util.rs  actix_compare_criterion.rs  ask_af_native.rs  ask_local.rs  broadcast_local.rs  compare_async_tell_current.rs  compare_sync_async_ask_current.rs  compare_sync_tell_current.rs  ephemeral_slacktor_poc.rs  framework_actor_hotpath.rs  framework_actor_reality.rs  framework_tell_snapshot.rs  json_route_2sync.rs  json_same_thread_async.rs  kameo_compare_criterion.rs  kameo_ractor_ask_compare.rs  latency_local.rs  local_tell.rs  local_tell_criterion.rs  pubsub_local.rs  pubsub_local_actix.rs  remote_framework_compare.rs  routing_graph_sim.rs  spawn_pool.rs  spsc_async_to_sync_actor.rs  spsc_sync_actor_pair.rs  sync_runtime_tell_v2_compare.rs  ws_bridge.rs
tests/: async_pubsub_alloc_regression.rs  async_work_sharding_regression.rs
