[features]
default = []
remote = ["icanact-core/remote"]
ws = ["icanact-core/ws"]
lmdb-durability = ["icanact-core/lmdb-durability"]

[package]
name = "icanact-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
icanact-core = { git = "ssh://git@github.com/moofone/actor-framework-core.git", branch = "main", default-features = false, features = ["async-actors", "lmdb-durability"] }

[dev-dependencies]
actix = "0.13.5"
bytes = "1"
criterion = "0.5"
kameo = "0.19.2"
ractor = { version = "0.15.10", default-features = false, features = ["tokio_runtime", "output-port-v2"] }
tokio = { version = "1.47", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5.6"
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "local_tell"
harness = false

[[bench]]
name = "compare_sync_tell_current"
harness = false

[[bench]]
name = "compare_async_tell_current"
harness = false

[[bench]]
name = "compare_sync_async_ask_current"
harness = false

[[bench]]
name = "actix_compare_criterion"
harness = false

[[bench]]
name = "ask_local"
harness = false

[[bench]]
name = "broadcast_local"
harness = false

[[bench]]
name = "ephemeral_slacktor_poc"
harness = false

[[bench]]
name = "latency_local"
harness = false

[[bench]]
name = "local_tell_criterion"
harness = false

[[bench]]
name = "pubsub_local"
harness = false

[[bench]]
name = "pubsub_local_actix"
harness = false

[[bench]]
name = "routing_graph_sim"
harness = false

[[bench]]
name = "spawn_pool"
harness = false

[[bench]]
name = "ws_bridge"
harness = false

[[bench]]
name = "json_route_2sync"
harness = false

[[bench]]
name = "json_same_thread_async"
harness = false

[[bench]]
name = "kameo_compare_criterion"
harness = false

[[bench]]
name = "ask_af_native"
harness = false

[[bench]]
name = "sync_runtime_tell_v2_compare"
harness = false

[[bench]]
name = "framework_tell_snapshot"
harness = false

[[bench]]
name = "framework_actor_reality"
harness = false

[[bench]]
name = "framework_actor_hotpath"
harness = false
