[features]
default = []
remote = ["icanact-core/remote"]
ws = ["icanact-core/ws"]
lmdb-durability = ["icanact-core/lmdb-durability"]

[package]
name = "icanact-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
icanact-core = { path = "../../actor-framework-core", default-features = false, features = ["async-actors", "lmdb-durability"] }

[dev-dependencies]
actix = "0.13.5"
bytes = "1"
criterion = "0.5"
kameo = { version = "0.19.2", features = ["remote"] }
icanact-remote = { git = "ssh://git@github.com/moofone/icanact-remote.git", branch = "main" }
libp2p = { version = "0.56.0", features = ["cbor", "kad", "noise", "mdns", "quic", "request-response", "tcp", "tokio", "yamux"] }
ractor = { version = "0.15.12", default-features = false, features = ["tokio_runtime", "output-port-v2", "cluster"] }
ractor_cluster = "0.15.12"
rustls = "0.23.37"
tokio = { version = "1.47", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5.6"
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

[[bench]]
name = "local_tell"
harness = false

[[bench]]
name = "compare_sync_tell_current"
harness = false

[[bench]]
name = "compare_async_tell_current"
harness = false

[[bench]]
name = "compare_sync_async_ask_current"
harness = false

[[bench]]
name = "actix_compare_criterion"
harness = false

[[bench]]
name = "ask_local"
harness = false

[[bench]]
name = "broadcast_local"
harness = false

[[bench]]
name = "ephemeral_slacktor_poc"
harness = false

[[bench]]
name = "latency_local"
harness = false

[[bench]]
name = "local_tell_criterion"
harness = false

[[bench]]
name = "pubsub_local"
harness = false

[[bench]]
name = "pubsub_local_actix"
harness = false

[[bench]]
name = "routing_graph_sim"
harness = false

[[bench]]
name = "spawn_pool"
harness = false

[[bench]]
name = "ws_bridge"
harness = false

[[bench]]
name = "json_route_2sync"
harness = false

[[bench]]
name = "json_same_thread_async"
harness = false

[[bench]]
name = "kameo_compare_criterion"
harness = false

[[bench]]
name = "ask_af_native"
harness = false

[[bench]]
name = "sync_runtime_tell_v2_compare"
harness = false

[[bench]]
name = "framework_tell_snapshot"
harness = false

[[bench]]
name = "framework_actor_reality"
harness = false

[[bench]]
name = "framework_actor_hotpath"
harness = false

[[bench]]
name = "remote_framework_compare"
harness = false

[[bench]]
name = "kameo_ractor_ask_compare"
harness = false
[patch."ssh://git@github.com/moofone/icanact-remote.git"]
icanact-remote = { path = "/tmp/icanact-remote-work" }
